--- a/pages/19006.html
+++ b/pages/19006.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      renormalization condition in nLab
+      protection from quantum corrections in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      renormalization condition
+      protection from quantum corrections
   </h1>
 
 
@@ -809,33 +809,33 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_ae337888512e53ccddbca9a8716ba253f847ec70_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re&quot;-)normalization</a> is an <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension</a> of <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a>, uniquely defined away from coinciding spacetime arguments, to the locus of coinciding spacetime arguments. Before the extension these <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a> may generally enjoy further properties beyond the <a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal factorization</a> that characterizes them as time-ordered products. Not all these properties necessarily need to be preserved by a choice of <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a> to coinciding spacetime arguments. A <em>renormalization condition</em> is the condition that some such properties ought to be preserved by the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re-&quot;)normalization</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally all <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> are subject to <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> choices that may change their value from that computed in <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a>. But if <a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization conditions</a> are imposed, these generally reduce the space of renormalization choices. If a choice of <a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization condition</a> completely removes the renormalization freedom in an observable, one says that it <em>protects</em> the observable from <em>receiving quantum corrections</em>.</p>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a> holds true if at least the renormalization conditions “field independence” and “translation equivariance” are imposed. Depending on how many other renormalization conditions are imposed, the resulting <a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a> becomes smaller. (<a href='#Duetsch18'>Duetsch 18, remark 3.102</a>)</p>
-
-<p>Besides “field indepence” and “translation invariance” a key renormalization condition for <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theories</a> is the <em><a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a></em> or quivalently <em><a class='existingWikiWord' href='/nlab/show/Ward+identity'>master Ward identity</a></em>. If this renormalization condition cannot be satisfied, one says that the corresponding <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a> does not exist due to a “<a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a>”. (<a href='#Duetsch18'>Dütsch 18, section 4.2</a>)</p>
-
-<h2 id='definition'>Definition</h2>
-
-<p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> <a href='S-matrix#RenormalizationConditions'>this definition</a>.</p>
+<p>Typically this is considered for global <a class='existingWikiWord' href='/nlab/show/symmetry+of+a+Lagrangian+density'>symmetries</a>, the <a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization condition</a> being that the symmetry is retained after renormalization. In this case one says that that the <em>symmetry protects</em> the quantum observable from receiving quantum corrections.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<p>For the moment see at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> <a href='S-matrix#BasicConditionsRenormalization'>this prop.</a></p>
+<p>Famous examples of protected quantities are <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> and <a class='existingWikiWord' href='/nlab/show/charge'>charges</a> of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS-states</a>, which are protected, in this way, by <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. The reason why supersymmetric field theory admits more interesting computations than are possible otherwise is that the protection of BPS states allows to compute many quantum observables that would otherwise not be computatble.</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<p>This is for instance the reason why so much is known about the <a class='existingWikiWord' href='/nlab/show/Bekenstein-Hawking+entropy'>Bekenstein-Hawking entropy</a> of extremal (hence <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS</a>) <a class='existingWikiWord' href='/nlab/show/black+hole'>black holes</a> (see at <em><a class='existingWikiWord' href='/nlab/show/black+holes+in+string+theory'>black holes in string theory</a></em>) while comparatively little is known about the quantum properties of non-BPS and hence “non-protected” black holes.</p>
 
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/protection+from+quantum+corrections'>protection from quantum corrections</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_ae337888512e53ccddbca9a8716ba253f847ec70_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li id='Duetsch18'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetry+protected+trivial+order'>symmetry protected trivial order</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a></p>
+</li>
 </ul>
 
 <p>
@@ -843,22 +843,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 20, 2018 00:36:19 
+  Created on February 20, 2018 00:41:32 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/renormalization+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization+condition/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/renormalization+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/protection+from+quantum+corrections" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/renormalization+condition" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/protection+from+quantum+corrections" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/renormalization+condition" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/protection+from+quantum+corrections" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/renormalization+condition" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/protection+from+quantum+corrections" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
