--- a/pages/19007.html
+++ b/pages/19007.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      supersymmetry breaking in nLab
+      hidden sector in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      supersymmetry breaking
+      hidden sector
   </h1>
 
 
@@ -308,106 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+    <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/spontaneously+broken+symmetry'>spontaneous breaking</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. Key to all <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> with global low energy supersymmetry. In <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> for instance due to <em><a class='existingWikiWord' href='/nlab/show/gravitino+condensation'>gravitino condensation</a></em>.</p>
+<p>In (<a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a>) <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> a <em>hidden sector</em> is a subspace of the space of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> whose only <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> with the remaining fields is via <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>.</p>
 
-<p>In a supersymmetric <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> <math class='maruku-mathml' display='inline' id='mathml_c2cae89b324b22609dab38778ea0fa7fecb6c167_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>T_{\mu \nu}</annotation></semantics></math> is the image of the supersymmetry <a class='existingWikiWord' href='/nlab/show/Noether%27s+theorem'>Noether&#39;s</a> <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> <math class='maruku-mathml' display='inline' id='mathml_c2cae89b324b22609dab38778ea0fa7fecb6c167_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mi>β</mi></mrow></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S_{\nu \beta})</annotation></semantics></math> under the <a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie bracket</a> with the <a class='existingWikiWord' href='/nlab/show/supercharge'>supercharge</a> <math class='maruku-mathml' display='inline' id='mathml_c2cae89b324b22609dab38778ea0fa7fecb6c167_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(Q_\alpha)</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c2cae89b324b22609dab38778ea0fa7fecb6c167_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><mi>ν</mi><mo>,</mo><mi>β</mi></mrow></msub><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
-  T_{\mu \nu}
-  \;=\;
-  \gamma_\mu^{\alpha \beta}
-  \{Q_\alpha, S_{\nu, \beta}\}
+<p>Specifically <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> this means that the <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_452753aba6bcb56a2fd4391c8f09469eb78f1d7c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math> over <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <math class='maruku-mathml' display='inline' id='mathml_452753aba6bcb56a2fd4391c8f09469eb78f1d7c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/pullback'>fiber product</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_452753aba6bcb56a2fd4391c8f09469eb78f1d7c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><munderover><mo>⟶</mo><mo>≃</mo><mrow><mo stretchy='false'>(</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>P</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo></mrow></munderover><msub><mi>E</mi> <mn>1</mn></msub><msub><mo>×</mo> <mi>Σ</mi></msub><msub><mi>E</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>
+  E \underoverset{\simeq}{(p_1,P_2)}{\longrightarrow} E_{1} \times_\Sigma E_2
 
 </annotation></semantics></math></div>
-<p>and hence the <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a> of the <a class='existingWikiWord' href='/nlab/show/stress-energy+tensor'>stress-energy tensor</a> is</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c2cae89b324b22609dab38778ea0fa7fecb6c167_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><msub><mi>T</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo><mo>=</mo><msubsup><mi>γ</mi> <mi>μ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msubsup><mo stretchy='false'>⟨</mo><mi>vac</mi><mo stretchy='false'>|</mo><mo stretchy='false'>{</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo>,</mo><msub><mi>S</mi> <mrow><msub><mi>ν</mi> <mi>beta</mi></msub></mrow></msub><mo stretchy='false'>}</mo><mo stretchy='false'>|</mo><mi>vac</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>
-  \langle vac \vert 
-    T_{\mu \nu}
-  \vert vac \rangle
+<p>such that the <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_452753aba6bcb56a2fd4391c8f09469eb78f1d7c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>int</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}_{int}</annotation></semantics></math> is of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_452753aba6bcb56a2fd4391c8f09469eb78f1d7c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>int</mi></msub><mo>=</mo><msubsup><mi>p</mi> <mn>1</mn> <mo>*</mo></msubsup><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mn>1</mn></mrow></msub><mo>+</mo><msubsup><mi>p</mi> <mn>2</mn> <mo>*</mo></msubsup><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mrow><mi>int</mi><mo>,</mo><mn>2</mn></mrow></msub><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>grav</mi></msub></mrow><annotation encoding='application/x-tex'>
+  \mathbf{L}_{int}
   =
-  \gamma_\mu^{\alpha \beta}
-  \langle vac \vert 
-     \{Q_\alpha, S_{\nu_beta}\}
-  \vert vac \rangle
+  p_1^\ast \mathbf{L}_{int,1}
+  +
+  p_2^\ast \mathbf{L}_{int,2}
+  + 
+  \mathbf{L}_{grav}
 
 </annotation></semantics></math></div>
-<p>which hence vanishes if the <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> is supersymmetric, hence if supersymmetry is not <a class='existingWikiWord' href='/nlab/show/spontaneously+broken+symmetry'>spontaneously broken</a>.</p>
+<p>where the last summand is the interaction term of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> coupled to the respective fields.</p>
 
-<p>Conversely, this means that supersymmetry, as opposed to (<a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge</a>) <a class='existingWikiWord' href='/nlab/show/symmetry+of+a+Lagrangian+density'>symmetries of the Lagrangian</a> not related to <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, is broken by a positive vacuum energy</p>
+<h2 id='examples'>Examples</h2>
 
-<p>(e.g <a href='#Witten81'>Witten 81, (3), (4)</a>)</p>
-
-<p><img src='https://ncatlab.org/nlab/files/SupersymmetryBreaking.png' width='800'/></p>
-
-<blockquote>
-<p>graphics grabbed from <a href='#FayetFerrara77'>Fayet-Ferrara 77, Fig. 1 on p. 286 (38 of 86)</a></p>
-</blockquote>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/hidden+sector'>hidden sector</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Starobinsky+model+of+cosmic+inflation'>Starobinsky model of cosmic inflation</a></p>
-</li>
-</ul>
+<p>The concept of <a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>gravity-mediated supersymmetry breaking</a> resulted from study of <span class='newWikiWord'>gaugino condensation<a href='/nlab/new/gaugino+condensation'>?</a></span> in a hidden sector. (<a href='#Nilles01'>Nilles 01</a>)</p>
 
 <h2 id='references'>References</h2>
 
-<p>Original articles include</p>
-
 <ul>
-<li id='FayetFerrara77'>
-<p><a class='existingWikiWord' href='/nlab/show/Pierre+Fayet'>Pierre Fayet</a>, <a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, <em>Supersymmetry</em>, Physics Reports Volume 32, Issue 5, September 1977, Pages 249-334 (<a href='https://doi.org/10.1016/0370-1573(77)90066-7'>doi:10.1016/0370-1573(77)90066-7</a>)</p>
-</li>
-
-<li id='Witten81'>
-<p><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Dynamical breaking of supersymmetry</em>, Nuclear Physics B Volume 188, Issue 3, 5 October 1981, Pages 513-554 (<a href='https://doi.org/10.1016/0550-3213(81)90006-7'>doi:10.1016/0550-3213(81)90006-7</a>)</p>
-</li>
-</ul>
-
-<p>Review includes</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hans-Peter+Nilles'>Hans-Peter Nilles</a>, <em>Supersymmetry, supergravity and particle physics</em>, Physics Reports Volume 110, Issues 1–2, August 1984, Pages 1-162 (<a href='https://doi.org/10.1016/0370-1573(84)90008-5'>doi:10.1016/0370-1573(84)90008-5</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hans-Peter+Nilles'>Hans-Peter Nilles</a>, <em>Hidden Sector Supergravity Breakdown</em>, Nucl. Phys. Proc. Suppl. 101 (2001) 237-250 (<a href='https://arxiv.org/abs/hep-ph/0106063'>arXiv:hep-ph/0106063</a>)</p>
-</li>
-
-<li>
-<p>Yael Shadmi, <em>Supersymmetry breaking</em> (<a href='http://arxiv.org/abs/hep-th/0601076'>arXiv:hep-th/0601076</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Matteo+Bertolini'>Matteo Bertolini</a>, <em>Supersymmetry breaking</em> (<a href='http://people.sissa.it/~bertmat/lect7.pdf'>pdf</a>)</p>
-</li>
-</ul>
-
-<p>A quantitative analysis showing that locally supersymmetric <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> theories will generically not exhibit global spacetime supersymmetry is</p>
-
-<ul>
-<li id='DLSW'><a class='existingWikiWord' href='/nlab/show/Keith+Dienes'>Keith Dienes</a>, Michael Lennek, David Sénéchal, Vaibhav Wasnik, <em>Is SUSY Natural?</em> NewJ.Phys.10:085003,2008 (<a href='http://arxiv.org/abs/0804.4718'>arXiv:0804.4718</a>)</li>
-</ul>
-
-<p>Discussion of supersymmetry breaking unified with <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> via <a class='existingWikiWord' href='/nlab/show/higher+curvature+correction'>higher curvature corrections</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> – in the <a class='existingWikiWord' href='/nlab/show/Starobinsky+model+of+cosmic+inflation'>Starobinsky model of cosmic inflation</a> – includes</p>
-
-<ul>
-<li id='FerrarKehagias14'>
-<p>Sergio Ferrara, Alex Kehagias, <em>Higher Curvature Supergravity, Supersymmetry Breaking and Inflation</em> (<a href='http://arxiv.org/abs/1407.5187'>arXiv:1407.5187</a>)</p>
-</li>
-
-<li id='DFKRU14'>
-<p>I. Dalianis, F. Farakos, A. Kehagias, A. Riotto, R. von Unge, <em>Supersymmetry Breaking and Inflation from Higher Curvature Supergravity</em> (<a href='http://arxiv.org/abs/1409.8299'>arXiv:1409.8299</a>)</p>
-</li>
+<li id='Nilles01'><span class='newWikiWord'>Hans Peter Nilles<a href='/nlab/new/Hans+Peter+Nilles'>?</a></span>, <em>Hidden Sector Supergravity Breakdown</em>, Nucl. Phys. Proc. Suppl. 101 (2001) 237-250 (<a href='https://arxiv.org/abs/hep-ph/0106063'>arXiv:hep-ph/0106063</a>)</li>
 </ul>
 
 <p>
@@ -415,22 +345,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 20, 2018 00:59:10 
+  Created on February 20, 2018 00:58:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supersymmetry+breaking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetry+breaking/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/supersymmetry+breaking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetry+breaking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hidden+sector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/supersymmetry+breaking" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/hidden+sector" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/supersymmetry+breaking" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/hidden+sector" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/supersymmetry+breaking" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/hidden+sector" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
